@startuml

title __GRAPHUI's Class Diagram__\n

  namespace  {
    namespace raph {
      namespace I {
        class GraphUI.GraphView {
            - g : DirectGraph<Webpage, Connection>
            - graphView : SmartGraphPanel<Webpage, Connection>
            - isPathFinding : boolean
            - listView : ListView<String>
            - stage : Stage
            + GraphView()
            + GraphView()
            + createMemento()
            + getGraphView()
            + setMemento()
            + startColors()
            + turnGraphRealTime()
            + update()
            - createGraphView()
            - createListView()
            - createPathButton()
            - createPopulateEvent()
            - createTopBar()
            - createUndoButton()
            - initUI()
            - turnVertexNotFoundRed()
        }
      }
    }
  }
  

  namespace  {
    namespace raph {
      namespace I {
        class GraphUI.GraphView.GraphViewMemento {
            - graph : DirectGraph<Webpage, Connection>
            + getGraph()
            ~ GraphViewMemento()
            ~ getWebScrapper()
        }
      }
    }
  }
  

  namespace  {
    namespace raph {
      namespace I {
        class GraphUI.TopBar {
            - firstVertex : Vertex<Webpage>
            - g : DirectGraph<Webpage, Connection>
            - menuBar : MenuBar
            - stage : Stage
            ~ TopBar()
            ~ setFirstVertex()
            - countNotFound()
            - createStatistics()
            - menuBar()
            - setMostVisitedPage()
        }
      }
    }
  }
  

  GraphUI.GraphView .up.|> java.util.Observer
  GraphUI.GraphView o-- UndoFeature.GraphViewCaretaker : graphViewCaretaker
  GraphUI.GraphView o-- GraphViewPackage.SmartPlacementStrategy : strategy
  GraphUI.GraphView o-- GraphUI.TopBar : topBar
  GraphUI.GraphView o-- WebScrapper.WebScrapper : webScrapper
  GraphUI.GraphView +-down- GraphUI.GraphView.GraphViewMemento
  GraphUI.GraphView.GraphViewMemento .up.|> UndoFeature.Memento
  GraphUI.GraphView.GraphViewMemento o-- WebScrapper.WebScrapper : webScrapper
  GraphUI.TopBar -up-|> javafx.scene.layout.VBox
  GraphUI.TopBar o-- FxPages.Statistics : statistics


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
